add duration session

--- a/app/src/main/res/values/password.xml
+++ b/app/src/main/res/values/password.xml
@@ -3,4 +3,9 @@
     <string name="networkSSID">Vyfe-HotSpot</string>
     <string name="networkPass">dietpihotspot</string>
     <string name="token_vimeo">bearer f809d258eb7f7e83d8c5a3e468e53d9b</string>
+    <string name="scopeVimeo">private edit delete upload video_files public</string>
+    <string name="clientIdVimeo">6ea7fbd6c8045daff1df570fd3b8f4f12eef2e9c</string>
+    <string name="clientSecretVimeo">nrqxj/2xNou5I4nAVPqGD1SANmCud/DvFSmwyZUS1fuBVKSq8HfVFbyUlcWUVscKsf6TrPAnxHhRgf9T/TTICkLUnVWUHN2VkgsHGuxV66kmE35Fk03RIgQnmyHoiZY3</string>
+    <string name="accesToken">eccbccc4355aaaa5b186feab8521636c</string>
+    <string name="uriUser">/users/86182831</string>
 </resources>
