--- a/app/src/main/res/values/_password.xml
+++ b/app/src/main/res/values/_password.xml
@@ -3,4 +3,7 @@
     <string name="_networkSSID"><!--RasberrySSID--></string>
     <string name="_networkPass"><!--RasberryPass--></string>
     <string name="_token_vimeo"><!--bearer TOKEN--></string>
+    <string name="_scopeVimeo"><!--scope Vimeo--></string>
+    <string name="_clientIdVimeo"><!--clientId Vimeo--></string>
+    <string name="_clientSecretVimeo"><!--clientSecret Vimeo--></string>
 </resources>
