--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -25,10 +25,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="40dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="40dp"
                 android:layout_weight="0.3"
                 android:orientation="vertical">
 
@@ -57,8 +57,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_fix_title"
@@ -74,26 +74,26 @@
                         android:id="@+id/tv_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:text="@string/video_tittle"
                         android:textColor="@color/white"
                         android:textSize="20sp"
-                        android:layout_marginLeft="8dp"
                         app:fontFamily="@font/roboto_bold" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_fix_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
                         android:text="@string/description"
                         android:textColor="@color/white"
                         android:textSize="16sp"
@@ -103,9 +103,9 @@
                         android:id="@+id/tv_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="8dp"
                         android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
                         android:text="@string/no_description"
                         android:textColor="@color/white"
                         android:textSize="16sp"
@@ -151,8 +151,8 @@
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="0dp"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginEnd="0dp"
                         android:layout_marginRight="00dp"
                         android:layout_weight="0.3"
                         android:background="@drawable/style_button_white"
@@ -162,13 +162,18 @@
                         android:visibility="visible"
                         app:fontFamily="@font/roboto_bold" />
 
-                    <ImageView
-                        android:id="@+id/iv_upload"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                    <ProgressBar
+                        android:id="@+id/progress_upload"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="0dp"
                         android:layout_weight="0.3"
-                        android:src="@drawable/animation_roue_white"
-                        android:visibility="invisible" />
+                        android:max="100"
+                        android:progress="0"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18sp"
+                        android:visibility="gone" />
                 </LinearLayout>
             </LinearLayout>
 
