--- a/app/src/main/res/layout/activity_info_video.xml
+++ b/app/src/main/res/layout/activity_info_video.xml
@@ -89,31 +89,27 @@
 
                 <Button
                     android:id="@+id/bt_edit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="60dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="160dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:alpha="0.4"
-                    android:background="@drawable/style_button"
-                    android:text="@string/edit"
+                    android:layout_marginTop="100dp"
+                    android:background="@drawable/edit"
+                    android:enabled="false"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:fontFamily="@font/roboto_bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:enabled="false"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/btn_delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="40dp"
                     android:layout_marginEnd="60dp"
                     android:layout_marginRight="60dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/style_button_white"
-                    android:text="Supprimer"
+                    android:background="@drawable/delete"
                     android:textSize="18sp"
                     app:fontFamily="@font/roboto_bold"
                     app:layout_constraintEnd_toEndOf="parent"
