--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -169,6 +169,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="0dp"
                         android:layout_weight="0.3"
+                        android:layout_gravity="center_vertical"
                         android:max="100"
                         android:progress="0"
                         android:textColor="@color/colorBlack"
