--- a/app/src/main/res/layout/fragment_tag_set.xml
+++ b/app/src/main/res/layout/fragment_tag_set.xml
@@ -4,7 +4,13 @@
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+<TextView
+    android:id="@+id/tv_tag_set_selected"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="17dp"
+    android:layout_gravity="center"
+    android:textColor="@color/colorWhiteTwo"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/re_tags"
