--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
     <color name="colorBlue">#69E3E7</color>
     <color name="colorGrey">#5A6C70</color>
     <color name="colorGreyDrak">#3B4648</color>
+    <color name="red">#F44</color>
 
 
 
