--- a/app/src/main/res/drawable-xhdpi/style_input.xml
+++ b/app/src/main/res/drawable-xhdpi/style_input.xml
@@ -11,7 +11,7 @@
 
     <padding android:left="5dp" android:right="5dp" />
 
-    <stroke android:width="1dp" android:color="@color/white" />
+    <stroke android:width="1dp" android:color="@color/colorWhiteTwo" />
 
 
 </shape>
