--- a/app/src/main/res/drawable/color_gradient_green_lightgreen.xml
+++ b/app/src/main/res/drawable/color_gradient_green_lightgreen.xml
@@ -4,7 +4,7 @@
         android:radius="10dp" />
     <gradient
         android:endColor="#4A6544"
-        android:startColor="@color/color7"
+        android:startColor="@color/colorGreenLight"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
 </shape>
