--- a/app/src/main/res/drawable/color_gradient_magenta_light.xml
+++ b/app/src/main/res/drawable/color_gradient_magenta_light.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="10dp" />
     <gradient
-        android:endColor="@color/color10"
+        android:endColor="@color/colorMagenta"
         android:startColor="@color/colorLightMagenta"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
