--- a/app/src/main/res/drawable/color_gradient_red.xml
+++ b/app/src/main/res/drawable/color_gradient_red.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="10dp" />
     <gradient
-        android:endColor="@color/color4"
+        android:endColor="@color/colorFadedOrange"
         android:startColor="@color/colorOrange"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
