--- a/app/src/main/res/drawable/color_gradient_yellow.xml
+++ b/app/src/main/res/drawable/color_gradient_yellow.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="10dp" />
     <gradient
-        android:endColor="@color/color3"
+        android:endColor="@color/colorGreenLight"
         android:startColor="@color/colorYellowish"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
