--- a/app/src/main/res/layout/_mock_timeline.xml
+++ b/app/src/main/res/layout/_mock_timeline.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:minHeight="25dp"
                 android:text="template1"
                 android:layout_margin="10dp"
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:minHeight="25dp"
                 android:text="template2"
                 android:layout_margin="10dp"
@@ -50,7 +50,7 @@
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:minHeight="25dp"
                 android:text="template3"
                 android:layout_margin="10dp"
