--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/connected"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="20sp"
                     app:fontFamily="@font/roboto_bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -74,8 +74,8 @@
                         android:includeFontPadding="false"
                         android:inputType="textEmailAddress"
                         android:padding="15dp"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
+                        android:textColorHint="@color/colorWhiteTwo"
                         android:textSize="18sp"
                         app:fontFamily="@font/roboto"
                         app:layout_constraintStart_toStartOf="parent"
@@ -109,8 +109,8 @@
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:padding="15dp"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
+                        android:textColorHint="@color/colorWhiteTwo"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/et_mail" />
@@ -151,7 +151,7 @@
                         android:fontFamily="@font/roboto"
                         android:text="@string/lost_password"
                         android:textAllCaps="false"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/colorWhiteTwo" />
 
 
                     <Button
@@ -164,7 +164,7 @@
                         android:fontFamily="@font/roboto_bold"
                         android:padding="5dp"
                         android:text="@string/connected_maj"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -185,7 +185,7 @@
                 android:gravity="center_vertical"
                 android:paddingTop="10dp"
                 android:text="@string/create_account"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:textSize="15sp"
                 android:layout_marginBottom="20dp"/>
 
