--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -69,7 +69,7 @@
                     android:layout_gravity="start"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/colorWhiteTwo" />
 
                 <TextView
                     android:id="@+id/tv_end_time"
@@ -79,7 +79,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/colorWhiteTwo" />
             </LinearLayout>
 
             <SeekBar
