--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -129,7 +129,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/video_save"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:textSize="20sp"
                 app:fontFamily="@font/roboto_bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +154,7 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:text="@string/back_to_main"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -167,7 +167,7 @@
                     android:background="@null"
                     android:padding="5dp"
                     android:text="@string/restart_session"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="18sp"
                     android:visibility="visible" />
 
@@ -180,7 +180,7 @@
                     android:background="@drawable/style_button"
                     android:padding="5dp"
                     android:text="@string/show_video"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="18sp" />
 
 
@@ -216,7 +216,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/dont_save_session"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/colorWhiteTwo"
             android:textSize="18sp"
             app:fontFamily="@font/roboto_bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -237,7 +237,7 @@
             android:layout_marginTop="32dp"
             android:background="@drawable/style_button"
             android:text="@string/back_to_main"
-            android:textColor="@color/white"
+            android:textColor="@color/colorWhiteTwo"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/tv_error_space"
             app:layout_constraintStart_toStartOf="@+id/tv_error_space"
