--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@string/video_tittle"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="20sp"
                         app:fontFamily="@font/roboto_bold" />
 
@@ -77,7 +77,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:text="@string/video_tittle"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="20sp"
                         app:fontFamily="@font/roboto_bold" />
                 </LinearLayout>
@@ -95,7 +95,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="@string/description"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="16sp"
                         app:fontFamily="@font/roboto" />
 
@@ -107,7 +107,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="@string/no_description"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="16sp"
                         app:fontFamily="@font/roboto" />
                 </LinearLayout>
@@ -128,7 +128,7 @@
                         android:layout_weight="0.3"
                         android:background="@drawable/style_button"
                         android:text="@string/play_video"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhiteTwo"
                         android:textSize="18sp"
                         app:fontFamily="@font/roboto_bold" />
 
@@ -189,7 +189,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="@string/used_grid"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="20sp"
                     app:fontFamily="@font/roboto_bold"
                     android:layout_gravity="center"/>
@@ -200,7 +200,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="8dp"
                     android:text="@string/used_grid"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
                     android:textSize="18sp"
                     app:fontFamily="@font/roboto"
                     android:layout_gravity="center"/>
