--- a/app/src/main/res/layout/create_tags_fragment.xml
+++ b/app/src/main/res/layout/create_tags_fragment.xml
@@ -51,8 +51,8 @@
                     android:hint="@string/tag_name"
                     android:inputType="textPersonName"
                     android:maxHeight="400dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:textColor="@color/colorWhiteTwo"
+                    android:textColorHint="@color/colorWhiteTwo"
                     android:textSize="20sp"
                     app:fontFamily="@font/roboto"
                     tools:layout_editor_absoluteX="116dp"
@@ -78,7 +78,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/style_button"
                 android:text="@string/add_tag"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 tools:layout_editor_absoluteX="449dp"
                 tools:layout_editor_absoluteY="50dp"
                 android:layout_weight="0.2"/>
@@ -112,7 +112,7 @@
             android:layout_marginTop="8dp"
             android:padding="5dp"
             android:text="@string/end"
-            android:textColor="@color/black_de"
+            android:textColor="@color/colorBlack"
             android:textSize="16sp"
             android:background="@drawable/style_button_white"
             app:layout_constraintBottom_toBottomOf="parent"
