--- a/app/src/main/res/layout/item_observer.xml
+++ b/app/src/main/res/layout/item_observer.xml
@@ -7,6 +7,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_name_observer"
         android:text="@string/name"
-        android:textColor="@color/white"/>
+        android:textColor="@color/colorWhiteTwo"/>
 
 </LinearLayout>
