--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -46,7 +46,7 @@
                 android:layout_weight="8"
                 android:gravity="center_vertical"
                 android:singleLine="false"
-                android:textColor="@color/white"
+                android:textColor="@color/colorWhiteTwo"
                 android:textSize="17sp"
                 app:fontFamily="@font/roboto"
                 tools:text="@string/name_observation" />
