--- a/app/src/main/res/layout/item_tag_set_checkbox.xml
+++ b/app/src/main/res/layout/item_tag_set_checkbox.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/name_tag_set"
-        android:textColor="@color/white"
+        android:textColor="@color/colorWhiteTwo"
         android:layout_weight="0.9"/>
 
     <CheckBox
