--- a/app/src/main/res/layout/simple_spinner.xml
+++ b/app/src/main/res/layout/simple_spinner.xml
@@ -28,7 +28,7 @@ Ajout du paramètre couleur de texte
     android:layout_width="match_parent"
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:ellipsize="marquee"
-    android:textColor="@color/white"
+    android:textColor="@color/colorWhiteTwo"
     android:textSize="20sp"
 
     />
