--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -7,21 +7,15 @@
     android:layout_height="wrap_content"
     android:background="@drawable/color_gradient_grey"
     android:orientation="horizontal"
-    android:weightSum="10"
     android:layout_marginBottom="5dp"
     tools:layout_editor_absoluteY="25dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:weightSum="10">
 
         <ImageView
             android:id="@+id/iv_color"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.1"
             android:background="@android:color/holo_blue_light"
             android:minHeight="10dp"
             android:minWidth="10dp" />
@@ -30,8 +24,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_weight="9"
-            android:weightSum="10">
+            android:layout_weight="0.9"
+            >
 
             <TextView
                 android:id="@+id/tv_name"
@@ -62,12 +56,11 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="2"
-                android:gravity="center_vertical"
+                android:gravity="end"
                 android:textColor="@android:color/white"
                 android:visibility="visible"
                 app:fontFamily="@font/roboto"
                 tools:text="4"
-                android:textAlignment="textEnd"
                 tools:visibility="visible" />
 
             <ImageView
@@ -87,4 +80,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+
