--- a/app/src/main/res/layout/fragment_create_session.xml
+++ b/app/src/main/res/layout/fragment_create_session.xml
@@ -137,7 +137,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingTop="10dp">
+                    android:paddingTop="10dp"
+                    android:layout_marginBottom="20dp">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_view_import"
