--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -65,14 +65,14 @@
 
             <ImageView
                 android:id="@+id/iv_menu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
-                android:src="@drawable/icons8_trier_52"
+                android:src="@drawable/move"
                 android:visibility="gone" />
         </LinearLayout>
 
