--- a/app/src/main/res/layout/activity_prepare_session.xml
+++ b/app/src/main/res/layout/activity_prepare_session.xml
@@ -15,7 +15,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/create_grid_fragment_container"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content">
+    </FrameLayout>
+
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/create_template_fragment_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
     </FrameLayout>
 
 
