--- a/app/src/main/res/layout/create_tags_fragment.xml
+++ b/app/src/main/res/layout/create_tags_fragment.xml
@@ -4,30 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
     android:padding="15dp"
     tools:context="fr.vyfe.fragment.CreateTemplatesFragment">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="8dp"
             tools:ignore="MissingConstraints">
 
+            <TextView
+                android:id="@+id/tv_title_grid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:paddingRight="20dp"
+                android:text="Ajouter un tag "
+                android:textColor="@color/colorWhiteTwo"
+                android:textSize="20sp"
+                app:fontFamily="@font/roboto" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@drawable/tag"
                 android:layout_weight="0.8">
 
                 <ImageView
@@ -38,6 +47,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/darker_gray" />
 
+
                 <EditText
                     android:id="@+id/tag_name_edit"
                     android:layout_width="wrap_content"
@@ -46,9 +56,9 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
-                    android:background="@android:color/transparent"
                     android:ems="10"
-                    android:hint="@string/tag_name"
+                    android:background="@drawable/style_input"
+                    android:hint="Nom du tag"
                     android:inputType="textPersonName"
                     android:maxHeight="400dp"
                     android:textColor="@color/colorWhiteTwo"
@@ -59,65 +69,78 @@
                     tools:layout_editor_absoluteY="58dp" />
             </LinearLayout>
 
-
             <Spinner
                 android:id="@+id/colorSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:background="@drawable/style_button_white"
+                android:background="@drawable/style_input"
                 android:layout_marginStart="16dp"
                 android:layout_weight="0.2"/>
+
 
             <Button
                 android:id="@+id/add_tag_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/style_button"
-                android:text="@string/add_tag"
+                android:layout_marginLeft="16dp"
+                android:layout_weight="0.2"
+                android:background="@drawable/icons8_coche_96"
                 android:textColor="@color/colorWhiteTwo"
                 tools:layout_editor_absoluteX="449dp"
-                tools:layout_editor_absoluteY="50dp"
-                android:layout_weight="0.2"/>
+                tools:layout_editor_absoluteY="50dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
+            <TextView
+                android:id="@+id/grid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:paddingRight="20dp"
+                android:visibility="gone"
+                android:text="Votre grille en cours de création  "
+                android:textColor="@color/colorWhiteTwo"
+                android:textSize="20sp"
+                app:fontFamily="@font/roboto" />
+
+            <android.support.v7.widget.RecyclerView
+
+                android:id="@+id/recycler_view"
+                android:minWidth="300dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="1dp"
+                android:scrollbars="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+            <Button
+                android:id="@+id/save_grid_btn"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/save"
+                android:fontFamily="@font/roboto_bold"
+                android:padding="5dp"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="15dp"
+                android:textColor="@color/colorWhiteTwo"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
-
-
-        <android.support.v7.widget.RecyclerView
-
-            android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="16dp"
-            android:scrollbars="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-        <Button
-            android:id="@+id/end_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:padding="5dp"
-            android:text="@string/end"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp"
-            android:background="@drawable/style_button_white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 </ScrollView>
