--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
     tools:context="fr.vyfe.fragment.CreateGridFragment">
 
     <ScrollView
@@ -49,9 +48,8 @@
                 android:orientation="vertical"
                 android:layout_marginTop="20dp">
 
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingTop="20dp">
@@ -60,7 +58,9 @@
                         android:id="@+id/tv_title_grid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginStart="0dp"
                         android:padding="10dp"
                         android:paddingRight="20dp"
                         android:text="@string/grid_title"
@@ -72,76 +72,17 @@
                         android:id="@+id/grid_title_edit"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
-                        android:layout_gravity="center_horizontal"
                         android:background="@drawable/style_input"
                         android:ems="10"
-                        android:hint="@string/grid_title"
+                        android:hint="@string/ex_posture"
                         android:inputType="textPersonName"
                         android:textColor="@color/colorWhiteTwo"
                         android:textColorHint="@color/colorWhiteTwo"
                         android:textSize="20sp"
                         app:fontFamily="@font/roboto" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/new_event2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingTop="20dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/recycler_view">
+                </android.support.v7.widget.LinearLayoutCompat>
 
-                    <ImageView
-                        android:id="@+id/fab_add_moment2"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:clickable="true"
-                        android:src="@drawable/icons8_plus_96"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
-
-
-                    <TextView
-                        android:id="@+id/tv_add_tag2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp"
-                        app:fontFamily="@font/roboto"
-                        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
-                </LinearLayout>
-
-                <android.support.v7.widget.RecyclerView
-
-                    android:id="@+id/recycler_view2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:padding="10dp"
-                    android:scrollbars="vertical"/>
-
-                <Button
-                    android:id="@+id/save_grid_btn"
-                    style="@style/Widget.AppCompat.Button.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="32dp"
-                    android:background="@drawable/style_button"
-                    android:fontFamily="@font/roboto_bold"
-                    android:padding="5dp"
-                    android:paddingTop="15dp"
-                    android:text="@string/save_grid"
-                    android:textColor="@color/colorWhiteTwo"
-                    android:textSize="16sp"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
