--- a/app/src/main/res/layout/fragment_create_session.xml
+++ b/app/src/main/res/layout/fragment_create_session.xml
@@ -68,7 +68,7 @@
                         android:layout_marginStart="40dp"
                         android:background="@drawable/style_input"
                         android:ems="10"
-                        android:hint="@string/title_video"
+                        android:hint="@string/ex_title_session"
                         android:inputType="textPersonName"
                         android:textColor="@color/colorWhiteTwo"
                         android:textColorHint="@color/colorWhiteTwo"
